HelloUltraviolet/Fixtures/RejectedSource/Statements/LetInferenceFailure/Expected.uv
//! Expected diagnostic metadata for the LetInferenceFailure rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "rule.18.T-LetStmt-Infer-Err")
